--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -7,7 +7,8 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
+  # GHCR requires lowercase names
+  IMAGE_NAME: magicwand18/news-agent
 
 jobs:
   build-and-push:
